Quickfix for layout. Adjusted top margin so images stop clipping. My bad.

--- a/client/src/components/layout/layout.css
+++ b/client/src/components/layout/layout.css
@@ -11,7 +11,7 @@ body {
 }
 
 .layout-children {
-  margin-top: 15vh;
+  margin-top: 17vh;
   width: 75vw;
   min-height: 82vh;
 }
